--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: php
 php:
   - 7.4
+
+before_script:
+  - cp .env.travis .env
+  - composer self-update
+  - composer install --no-interaction
+
+script:
+  - php artisan key:generate
+  - vendor/bin/phpunit
