--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "apvanlaan/usaepay",
     "description": "Allows easy connection with and use of USAePay's REST API with Laravel",
-    "license": "license",
+    "license": "MIT",
     "authors": [
         {
             "name": "Aaron VanLaan",
