--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "homepage": "https://github.com/apvanlaan/usaepay",
     "keywords": ["Laravel", "USAePay"],
     "require": {
-        "illuminate/support": "~5|~6|~7",
+        "illuminate/support": "~5|~6|~7|~8",
         "usaepay/usaepay-php": "^2.0"
     },
     "require-dev": {
